--- a/backend/redis-backend/package.json
+++ b/backend/redis-backend/package.json
@@ -1,8 +1,10 @@
 {
   "name": "redis-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -10,10 +12,20 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "redis": "^4.7.0"
+    "@supabase/supabase-js": "^2.95.3",
+    "@vladmandic/face-api": "^1.7.15",
+    "body-parser": "^1.20.4",
+    "canvas": "^3.2.1",
+    "cors": "^2.8.6",
+    "dotenv": "^16.6.1",
+    "express": "^4.22.1",
+    "face-api.js": "^0.20.0",
+    "ioredis": "^5.9.2",
+    "multer": "^2.0.2",
+    "redis": "^4.7.0",
+    "tesseract.js": "^7.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
